--- a/styles/styles.css
+++ b/styles/styles.css
@@ -632,9 +632,243 @@ body {
 
 /*Основная часть*/
 
+.main-card {
+  width: 1170px;
+  margin: 0 auto;
+  padding: 51px 0 50px 0;
+}
+
+.main-card-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 370px);
+  row-gap: 27px;
+  column-gap: 30px;
+  align-items: start;
+}
+
+.main-card-item {
+  width: 370px;
+  min-height: 180px;
+  padding: 20px 25px 32px 25px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background-color: #FFBF47;
+  border-radius: 2px;
+  box-sizing: border-box;
+  align-items: flex-start;
+  background-repeat: no-repeat;
+  background-position: 243px 45px;
+}
+
+.card-new:before {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  top: 0;
+  right: 0;
+  background: url("../images/cards/new-card.png") no-repeat;
+}
+
+.main-card-item:nth-child(1) {
+  background-image: url("../images/cards/materials-card.svg");
+}
+
+.main-card-item:nth-child(2) {
+  background-image: url("../images/cards/instruments-card.svg");
+  background-color: #3BBCE3;
+}
+
+.main-card-item:nth-child(2) .main-card-link {
+  padding-right: 21px;
+}
+
+.main-card-item:nth-child(3) {
+  background-image: url("../images/cards/technique-card.svg");
+  background-color: #DC91D8;
+}
+
+.main-card-item:nth-child(3) .main-card-link {
+  padding-right: 34px;
+}
+
+.main-card-title {
+  font-weight: 700;
+  max-width: 320px;
+  font-size: 24px;
+  line-height: 30px;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin: 0 0 10px 0;
+}
+
+.main-card-link {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 11px 17px 9px 32px;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  margin: auto 0 1px 0;
+  position: relative;
+}
+
+.main-card-link:before {
+  position: absolute;
+  content: "";
+  width: 9px;
+  height: 9px;
+  transform: rotate(45deg);
+  border-top: 2px solid #ffffff;
+  border-right: 2px solid #ffffff;
+  box-sizing: border-box;
+  left: 13px;
+  top: 15px;
+}
+
+/*Слайдер*/
+
+.main-slider-item {
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.card-slider-list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.card-slider-item {
+  background-color: #555050;
+  display: none;
+  width: 770px;
+  min-height: 390px;
+  padding: 51px;
+  box-sizing: border-box;
+  color: #ffffff;
+  position: relative;
+}
+
+.card-slider-item:nth-child(1) {
+  background-image: url("../images/slider/drills-slide.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card-slider-title {
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-transform: uppercase;
+  margin: 0 0 11px 0;
+}
+
+.card-slider-text {
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0;
+}
+
+.home-link {
+  border: none;
+  padding: 13px 23px 15px 23px;
+  background-color: #EE3643;
+  border-radius: 2px;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.home-link:hover {
+  background-color: #CA2C37;
+}
+
+.home-link:active {
+  background-color: #BA2732;
+}
+
+.card-slider-link {
+  position: absolute;
+  left: 51px;
+  bottom: 48px;
+}
+
+/*Кнопки слайдера*/
+
+.sliders-controls {
+  width: 733px;
+  position: absolute;
+  left: 19px;
+  top: 173px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: #293449;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.slider-prev:before {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-top: 2px solid #ffffff;
+  border-right: 2px solid #ffffff;
+  transform: rotate(-135deg);
+  left: 22px;
+  top: 19px;
+}
+
+.slider-next:before {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-top: 2px solid #ffffff;
+  border-right: 2px solid #ffffff;
+  transform: rotate(45deg);
+  right: 22px;
+  top: 19px;
+}
+
+.slider-button:hover {
+  opacity: 0.5;
+}
+
+.slider-button:active  {
+  opacity: 0.3;
+}
 
 
 /*Остальное*/
+
+.current-slide {
+  display: block;
+}
 
 .user-current {
   display: flex;
