--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,6 +268,7 @@ body {
   padding: 0 29px 35px 31px;
   box-sizing: border-box;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  z-index: 2;
 }
 
 .user-enter-title {
@@ -463,6 +464,7 @@ body {
   padding: 0 29px 23px 31px;
   box-sizing: border-box;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  z-index: 2;
 }
 
 .user-registered-title {
@@ -672,6 +674,7 @@ body {
   top: 0;
   right: 0;
   background: url("../images/cards/new-card.png") no-repeat;
+  z-index: 2;
 }
 
 .main-card-item:nth-child(1) {
@@ -950,7 +953,20 @@ body {
   text-transform: uppercase;
 }
 
+.catalog-wrap {
+  display: grid;
+  grid-template-columns: 246px 870px;
+  grid-template-rows: 73px auto;
+  column-gap: 54px;
+  row-gap: 32px;
+}
+
 /*Цена*/
+
+.catalog-filters {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
 
 .catalog-filter-group {
   border: none;
@@ -1212,6 +1228,149 @@ body {
 .catalog-filters-button:active {
   opacity: 0.3;
 }
+
+/*Сортировка*/
+
+.catalog-sorting-wrap {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  padding-top: 35px;
+}
+
+/*.catalog-sorting-title {*/
+/*  margin-left: 54px;*/
+/*}*/
+
+.catalog-sorting-select {
+  width: 280px;
+  height: 40px;
+  border-radius: 2px;
+  border: 1px solid #3D546F;
+  padding-left: 10px;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #293449;
+  cursor: pointer;
+}
+.catalog-sorting-select:hover {
+  border: 1px solid #63A63E;
+}
+
+.catalog-sorting-select:active {
+  border: 1px solid #FFBF47;
+}
+
+/*Результаты поиска*/
+
+.catalog-results {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  width: 870px;
+}
+
+.catalog-results-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.catalog-results-item {
+  padding: 27px 27px 25px 27px;
+  border: 1px solid #eaeaea;
+  box-sizing: border-box;
+  width: 270px;
+  height-min: 380px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.perforator-img {
+  display: block;
+}
+
+.catalog-results-title {
+  font-size: 20px;
+  line-height: 26px;
+  text-align: center;
+  margin: 13px 0 15px 0;
+}
+
+.old-price {
+  text-align: center;
+  margin-bottom: 9px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  color: #A9A9A9;
+  letter-spacing: 2px;
+  text-decoration: line-through;
+}
+
+.catalog-results-button {
+  border: none;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: transparent;
+  position: relative;
+  padding: 0;
+  width: 139px;
+  height: 40px;
+  margin-left: 36px;
+  cursor: pointer;
+}
+
+.background-button {
+  position: absolute;
+  color: #EE3643;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.catalog-results-button:hover .background-button {
+  color: #CA2C37;
+}
+
+.catalog-results-button:active .background-button {
+  color: #BA2732;
+}
+
+.price {
+  padding-right: 14px;
+}
+
+.buy-button, .favorites-button {
+  display: none;
+  position: absolute;
+}
+
+.buy-button {
+  top: 66px;
+  left: 72px;
+  padding: 11px 32px 11px 41px;
+}
+
+.favorites-button {
+  top: 117px;
+  left: 72px;
+}
+
+.catalog-results-item:hover :is(.buy-button, .favorites-button) {
+  display: block;
+}
+
+.catalog-results-item:hover .perforator-img {
+  opacity: 0.3;
+}
+
 
 
 /*Остальное*/
